service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-lb
spec:
  type: LoadBalancer
  selector:
    app: app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
